# PointsOnSphere

./: README.md
src/: CMakeLists.txt  main.cpp
